# Calculator

./: BigNum.cpp  BigNum.h  CMakeLists.txt  DarkTheme.xml  GrayTheme.xml  Program.cpp  Program.h  README.md  Theme.cpp  Theme.h  WhiteTheme.xml  main.cpp  main_window.cpp  main_window.h  main_window.ui
